# lib/routes/location/index.js
@@ -19,6 +19,7 @@ module.exports.install = function(app) {
     app.post('/v1/setAllowedDeviceList', v1.inputParser, v1.setAllowedDeviceList);
     app.post('/v1/setDeviceSlogan', v1.inputParser, v1.setDeviceSlogan);
     app.post('/v1/getDeviceSlogan', v1.inputParser, v1.getDeviceSlogan);
+    app.post('/v1/getDeviceSecurityStatus', v1.inputParser, v1.getDeviceSecurityStatus);
 
     ///////////////////////////////////////////
     ///// API current /////////////////////////
@@ -36,6 +37,7 @@ module.exports.install = function(app) {
     app.post('/setAllowedDeviceList', v1.inputParser, v1.setAllowedDeviceList);
     app.post('/setDeviceSlogan', v1.inputParser, v1.setDeviceSlogan);
     app.post('/getDeviceSlogan', v1.inputParser, v1.getDeviceSlogan);
+    app.post('/getDeviceSecurityStatus', v1.inputParser, v1.getDeviceSecurityStatus);
 
     ///////////////////////////////////////////
     ///// non-Post /////////////////////////
@@ -58,6 +60,7 @@ module.exports.install = function(app) {
     app.all('/v1/GetVisitorHistory', handleUnsupportedMethod);
     app.all('/v1/setDeviceSlogan', handleUnsupportedMethod);
     app.all('/v1/getDeviceSlogan', handleUnsupportedMethod);
+    app.all('/v1/getDeviceSecurityStatus', handleUnsupportedMethod);
     app.all('/UpdateLocation', handleUnsupportedMethod);
     app.all('/GetLocation', handleUnsupportedMethod);
     app.all('/GetLocationGeoJSON', handleUnsupportedMethod);
@@ -68,4 +71,5 @@ module.exports.install = function(app) {
     app.all('/setAllowedDeviceList', handleUnsupportedMethod);
     app.all('/setDeviceSlogan', handleUnsupportedMethod);
     app.all('/getDeviceSlogan', handleUnsupportedMethod);
+    app.all('/getDeviceSecurityStatus', handleUnsupportedMethod);
 };
