# lib/routes/location/v1/index.js
@@ -13,5 +13,6 @@ module.exports = {
     setDeviceKey: location.setDeviceKey,
     setAllowedDeviceList: location.setAllowedDeviceList,
     setDeviceSlogan: location.setDeviceSlogan,
-    getDeviceSlogan: location.getDeviceSlogan
+    getDeviceSlogan: location.getDeviceSlogan,
+    getDeviceSecurityStatus: location.getDeviceSecurityStatus
 };
