# lib/routes/location/v1/inputParser.js
@@ -8,6 +8,7 @@ var RequestSetDeviceKey = require('../../../models/RequestSetDeviceKey');
 var RequestSetAllowedDeviceList = require('../../../models/RequestSetAllowedDeviceList');
 var RequestSetDeviceSlogan = require('../../../models/RequestSetDeviceSlogan');
 var RequestGetDeviceSlogan = require('../../../models/RequestGetDeviceSlogan');
+var RequestGetDeviceSecurityStatus = require('../../../models/RequestGetDeviceSecurityStatus');
 
 module.exports = function(req, res, next) {
     req.MIATARU = req.MIATARU || {};
@@ -55,6 +56,10 @@ module.exports = function(req, res, next) {
             case '/getDeviceSlogan':
             case '/v1/getDeviceSlogan':
                 parseGetDeviceSlogan(req);
+                break;
+            case '/getDeviceSecurityStatus':
+            case '/v1/getDeviceSecurityStatus':
+                parseGetDeviceSecurityStatus(req);
                 break;
         }
     }
@@ -133,4 +138,8 @@ function parseSetDeviceSlogan(req) {
 
 function parseGetDeviceSlogan(req) {
     req.MIATARU.request = new RequestGetDeviceSlogan(req.body['MiataruGetDeviceSlogan'] || {});
+}
+
+function parseGetDeviceSecurityStatus(req) {
+    req.MIATARU.request = new RequestGetDeviceSecurityStatus(req.body['MiataruGetDeviceSecurityStatus'] || {});
 }
