# lib/routes/location/v1/location.js
@@ -1146,6 +1146,67 @@ function getDeviceSlogan(req, res, next) {
         });
 }
 
+/**
+ * GetDeviceSecurityStatus
+ * Returns if a target device has a configured DeviceKey and if allowed devices list is enabled.
+ * Requesting device must be authenticated with RequestDeviceID + RequestDeviceKey.
+ * Visitor history is recorded only when the target device has a current location entry.
+ * @param req
+ * @param res
+ * @param next
+ */
+function getDeviceSecurityStatus(req, res, next) {
+    var request = req.MIATARU.request;
+    var targetDeviceId = request.deviceId();
+    var requestDeviceId = request.requestDeviceID();
+    var requestDeviceKey = request.requestDeviceKey();
+    var targetLastKey = kb.build(targetDeviceId, KEY_LAST);
+
+    seq()
+        .seq(function() {
+            var done = this;
+            validateDeviceKeyWithRequirement(requestDeviceId, requestDeviceKey, true, done);
+        })
+        .par('targetHasLastLocation', function() {
+            db.exists(targetLastKey, this);
+        })
+        .par('targetStoredKey', function() {
+            deviceKeyUtils.getDeviceKey(targetDeviceId, this);
+        })
+        .par('allowedDeviceListEnabled', function() {
+            allowedDevicesUtils.isAllowedDeviceEnabled(targetDeviceId, this);
+        })
+        .seq(function() {
+            var vars = this.vars || {};
+            var hasDeviceKey = vars.targetStoredKey !== null && vars.targetStoredKey !== undefined;
+            var isAllowedDeviceListEnabled = vars.allowedDeviceListEnabled === true;
+            var hasLastLocation = Number(vars.targetHasLastLocation) === 1;
+
+            if (hasLastLocation) {
+                var visitKey = kb.build(targetDeviceId, KEY_VISIT);
+                var visitorObject = request.requestVisitorObject(targetDeviceId);
+                if (visitorObject !== null) {
+                    recordVisitorHistory(visitKey, JSON.stringify(visitorObject));
+                }
+            }
+
+            res.send((new models.ResponseDeviceSecurityStatus(
+                targetDeviceId,
+                hasDeviceKey,
+                isAllowedDeviceListEnabled
+            )).data());
+        })
+        .catch(function(error) {
+            if (error instanceof errors.ForbiddenError) {
+                return next(error);
+            }
+            if (error && error.statusCode) {
+                return next(error);
+            }
+            next(new errors.InternalServerError(error));
+        });
+}
+
 
 module.exports = {
     updateLocation: updateLocation,
@@ -1158,5 +1219,6 @@ module.exports = {
     setDeviceKey: setDeviceKey,
     setAllowedDeviceList: setAllowedDeviceList,
     setDeviceSlogan: setDeviceSlogan,
-    getDeviceSlogan: getDeviceSlogan
+    getDeviceSlogan: getDeviceSlogan,
+    getDeviceSecurityStatus: getDeviceSecurityStatus
 };
